--- a/_sass/_highlighter.scss
+++ b/_sass/_highlighter.scss
@@ -1,14 +1,22 @@
 /* refer to https://github.com/spoqa/spoqa.github.com/blob/master/css/syntax.css */ 
 
-.highlight  { background: $oc-gray-0; }
-.highlight .c { color: #999988; font-style: italic } /* Comment */
-.highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
-.highlight .k { font-weight: bold } /* Keyword */
-.highlight .o { font-weight: bold } /* Operator */
+/* Base */
+.highlight  { background: $oc-black; }
+
+/* B */
+.highlight .bp { color: #32cd32 } /* Name.Builtin.Pseudo */
+
+/* C */
+.highlight .c { color: #bdc3c7; font-style: italic } /* Comment */
 .highlight .cm { color: #999988; font-style: italic } /* Comment.Multiline */
 .highlight .cp { color: #999999; font-weight: bold } /* Comment.Preproc */
-.highlight .c1 { color: #999988; font-style: italic } /* Comment.Single */
 .highlight .cs { color: #999999; font-weight: bold; font-style: italic } /* Comment.Special */
+.highlight .c1 { color: #999988; font-style: italic } /* Comment.Single */
+
+/* E */
+.highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
+
+/* G */
 .highlight .gd { color: #000000; background-color: #ffdddd } /* Generic.Deleted */
 .highlight .gd .x { color: #000000; background-color: #ffaaaa } /* Generic.Deleted.Specific */
 .highlight .ge { font-style: italic } /* Generic.Emph */
@@ -21,13 +29,28 @@
 .highlight .gs { font-weight: bold } /* Generic.Strong */
 .highlight .gu { color: #aaaaaa } /* Generic.Subheading */
 .highlight .gt { color: #aa0000 } /* Generic.Traceback */
+
+/* I */
+.highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
+
+/* K */
+.highlight .k { color: #fd9800; font-weight: bold } /* Keyword */
 .highlight .kc { font-weight: bold } /* Keyword.Constant */
 .highlight .kd { font-weight: bold } /* Keyword.Declaration */
 .highlight .kp { font-weight: bold } /* Keyword.Pseudo */
 .highlight .kr { font-weight: bold } /* Keyword.Reserved */
 .highlight .kt { color: #445588; font-weight: bold } /* Keyword.Type */
-.highlight .m { color: #009999 } /* Literal.Number */
-.highlight .s { color: #d14 } /* Literal.String */
+.highlight .kn { color: #fd9800; font-wiehgt: bold } /* Keyword.Name */ 
+
+/* M */
+.highlight .m { color: #1e90ff } /* Literal.Number */
+.highlight .mf { color: #1e90ff } /* Literal.Number.Float */
+.highlight .mh { color: #1e90ff } /* Literal.Number.Hex */
+.highlight .mi { color: #1e90ff } /* Literal.Number.Integer */
+.highlight .mo { color: #1e90ff } /* Literal.Number.Oct */
+
+/* N */
+.highlight .n { color: $oc-white }
 .highlight .na { color: #008080 } /* Name.Attribute */
 .highlight .nb { color: #0086B3 } /* Name.Builtin */
 .highlight .nc { color: #445588; font-weight: bold } /* Name.Class */
@@ -35,15 +58,19 @@
 .highlight .ni { color: #800080 } /* Name.Entity */
 .highlight .ne { color: #990000; font-weight: bold } /* Name.Exception */
 .highlight .nf { color: #990000; font-weight: bold } /* Name.Function */
-.highlight .nn { color: #555555 } /* Name.Namespace */
+.highlight .nn { color: $oc-white } /* Name.Namespace */
 .highlight .nt { color: #000080 } /* Name.Tag */
 .highlight .nv { color: #008080 } /* Name.Variable */
-.highlight .ow { font-weight: bold } /* Operator.Word */
-.highlight .w { color: #bbbbbb } /* Text.Whitespace */
-.highlight .mf { color: #009999 } /* Literal.Number.Float */
-.highlight .mh { color: #009999 } /* Literal.Number.Hex */
-.highlight .mi { color: #009999 } /* Literal.Number.Integer */
-.highlight .mo { color: #009999 } /* Literal.Number.Oct */
+
+/* O */
+.highlight .o { font-weight: bold; color: #adff2f } /* Operator */
+.highlight .ow { font-weight: bold; color: #adff2f } /* Operator.Word */
+
+/* P */
+.highlight .p { color: $oc-white; } 
+
+/* S */
+.highlight .s { color: #d14 } /* Literal.String */
 .highlight .sb { color: #d14 } /* Literal.String.Backtick */
 .highlight .sc { color: #d14 } /* Literal.String.Char */
 .highlight .sd { color: #d14 } /* Literal.String.Doc */
@@ -55,8 +82,14 @@
 .highlight .sr { color: #009926 } /* Literal.String.Regex */
 .highlight .s1 { color: #d14 } /* Literal.String.Single */
 .highlight .ss { color: #990073 } /* Literal.String.Symbol */
-.highlight .bp { color: #999999 } /* Name.Builtin.Pseudo */
+
+/* V */
 .highlight .vc { color: #008080 } /* Name.Variable.Class */
 .highlight .vg { color: #008080 } /* Name.Variable.Global */
 .highlight .vi { color: #008080 } /* Name.Variable.Instance */
-.highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
+
+/* W */
+.highlight .w { color: #bbbbbb } /* Text.Whitespace */
+
+/* Output */
+.output { background: $oc-gray-1; }
