--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
   <hr />
   <div class="footer-link">
     {% if site.author.facebook %}
-    <a href="https://www.facebook.com/{{ site.author.facebook }}"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+    <a href="https://www.facebook.com/{{ site.author.facebook }}"><i class="fa fa-facebook fa-2x" aria-hidden="true" style="color : #0066ff"></i></a>
     {% endif %}
 	
 	{% if site.author.youtubeUser %}
@@ -19,7 +19,7 @@
     {% endif %}
 
     {% if site.author.github %}
-    <a href="https://github.com/{{ site.author.github }}"><i class="fa fa-github" aria-hidden="true"></i></a>
+    <a href="https://github.com/{{ site.author.github }}"><i class="fa fa-github fa-2x" aria-hidden="true" style="color : #994d00"></i></a>
     {% endif %}
 	
 	{% if site.author.stackoverflow %}
@@ -59,7 +59,7 @@
     {% endif %}
 
     {% if site.author.email %}
-    <a href="mailto:{{ site.author.email }}"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+    <a href="mailto:{{ site.author.email }}"><i class="fa fa-envelope fa-2x" aria-hidden="true" style="color : #ff8c1a"></i></a>
     {% endif %}
 
   </div>
