--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,7 +31,7 @@
     {% endif %}
 
     {% if site.author.linkedin %}
-    <a href="https://www.linkedin.com/in/{{ site.author.linkedin }}"><i class="fa fa-linkedin" aria-hidden="true" style="color : #0077b5"></i></a>
+    <a href="https://www.linkedin.com/in/{{ site.author.linkedin }}"><i class="fa fa-linkedin fa-2x" aria-hidden="true" style="color : #0077b5"></i></a>
     {% endif %}
 	
 	{% if site.author.pinterest %}
