--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,5 +16,9 @@
 
 
   {% include google-analytics.html %}
-
+  
+  <!-- Mathjax -->
+  {% if page.use_math %}
+    {% include mathjax.html %}
+  {% endif %}
 </head>
