--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,5 +7,12 @@
 
     {% include footer.html %}
   </div>
+  
+ <!-- Scrolltop button -->
+   <div class="scroll-top">
+      <a href="#">
+        <img src="https://i.imgur.com/xd6qz5V.png" class="scroll-top">
+      </a>
+   </div>
 </body>
 </html>
