--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
  <!-- Scrolltop button -->
    <div class="scroll-top">
       <a href="#">
-        <img src="https://i.imgur.com/xd6qz5V.png" class="scroll-top">
+        <img src="https://i.imgur.com/a8VuK2O.png" class="scroll-top">
       </a>
    </div>
 </body>
