--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -35,6 +35,7 @@ body {
   padding: 2%;
   margin-bottom: 1.5em;
   border-radius: 3px; //header 모서리
+  background-color: #5b2c6f; //header 
 
   &-title {
     margin: 0.3em 0;
