--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,11 @@ layout: default
 ---
 <header>
   <div class="header-small">
-    <a href="{{site.url}}{{site.baseurl}}">{{ site.name }}</a>
+    <!-- <a href="{{site.url}}{{site.baseurl}}">{{ site.name }}</a> -->
+    <a href="{{site.url}}{{site.baseurl}}">
+      <i class="fa fa-lg fa-arrow-left"></i>
+      <span>Back to Posts</span>
+    </a>
   </div>
 </header>
 <div class="post">
