--- a/_sass/_highlighter.scss
+++ b/_sass/_highlighter.scss
@@ -63,7 +63,7 @@
 .highlight .nv { color: #008080 } /* Name.Variable */
 
 /* O */
-.highlight .o { font-weight: bold; color: #adff2f } /* Operator */
+.highlight .o { font-weight: bold; color: $oc-white } /* Operator #adff2f*/
 .highlight .ow { font-weight: bold; color: #adff2f } /* Operator.Word */
 
 /* P */
