--- a/_sass/_highlighter.scss
+++ b/_sass/_highlighter.scss
@@ -64,7 +64,7 @@
 
 /* O */
 .highlight .o { font-weight: bold; color: $oc-white } /* Operator #adff2f*/
-.highlight .ow { font-weight: bold; color: $oc-white } /* Operator.Word #adff2f*/
+.highlight .ow { font-weight: bold; color: #adff2f } /* Operator.Word */
 
 /* P */
 .highlight .p { color: $oc-white; } 
