--- a/_sass/_highlighter.scss
+++ b/_sass/_highlighter.scss
@@ -1,7 +1,7 @@
 /* refer to https://github.com/spoqa/spoqa.github.com/blob/master/css/syntax.css */ 
 
 /* Base */
-.highlight  { background: #333333; } /* $oc-black */ 
+.highlight  { background: $oc-black; } /* #333333 */ 
 
 /* B */
 .highlight .bp { color: #32cd32 } /* Name.Builtin.Pseudo */
