--- a/_sass/_highlighter.scss
+++ b/_sass/_highlighter.scss
@@ -4,14 +4,14 @@
 .highlight  { background: $oc-black; } /* #333333 */ 
 
 /* B */
-.highlight .bp { color: #32cd32 } /* Name.Builtin.Pseudo */
+.highlight .bp { color: #87CEFA } /* Name.Builtin.Pseudo #32cd32 LIGHTSKYBLUE*/
 
 /* C */
-.highlight .c { color: #bdc3c7; font-style: italic } /* Comment */
-.highlight .cm { color: #999988; font-style: italic } /* Comment.Multiline */
-.highlight .cp { color: #999999; font-weight: bold } /* Comment.Preproc */
-.highlight .cs { color: #999999; font-weight: bold; font-style: italic } /* Comment.Special */
-.highlight .c1 { color: #999988; font-style: italic } /* Comment.Single */
+.highlight .c { color: #32CD32; font-style: italic } /* Comment #bdc3c7 LIMEGREEN*/
+.highlight .cm { color: #32CD32; font-style: italic } /* Comment.Multiline #999988*/
+.highlight .cp { color: #32CD32; font-weight: bold } /* Comment.Preproc #999999*/
+.highlight .cs { color: #32CD32; font-weight: bold; font-style: italic } /* Comment.Special #999999*/
+.highlight .c1 { color: #32CD32; font-style: italic } /* Comment.Single #999988*/
 
 /* E */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
@@ -34,7 +34,7 @@
 .highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
 
 /* K */
-.highlight .k { color: #fd9800; font-weight: bold } /* Keyword */
+.highlight .k { color: #1E90FF; font-weight: bold } /* Keyword #fd9800  DODGERBLUE*/
 .highlight .kc { font-weight: bold } /* Keyword.Constant */
 .highlight .kd { font-weight: bold } /* Keyword.Declaration */
 .highlight .kp { font-weight: bold } /* Keyword.Pseudo */
@@ -43,21 +43,21 @@
 .highlight .kn { color: #fd9800; font-wiehgt: bold } /* Keyword.Name */ 
 
 /* M */
-.highlight .m { color: #1e90ff } /* Literal.Number */
-.highlight .mf { color: #1e90ff } /* Literal.Number.Float */
-.highlight .mh { color: #1e90ff } /* Literal.Number.Hex */
-.highlight .mi { color: #1e90ff } /* Literal.Number.Integer */
-.highlight .mo { color: #1e90ff } /* Literal.Number.Oct */
+.highlight .m { color: #baffba } /* Literal.Number #1e90ff*/
+.highlight .mf { color: #baffba } /* Literal.Number.Float #1e90ff*/
+.highlight .mh { color: #baffba } /* Literal.Number.Hex #1e90ff*/
+.highlight .mi { color: #baffba } /* Literal.Number.Integer #1e90ff*/
+.highlight .mo { color: #baffba } /* Literal.Number.Oct #1e90ff*/
 
 /* N */
 .highlight .n { color: $oc-white }
 .highlight .na { color: #008080 } /* Name.Attribute */
-.highlight .nb { color: #0086B3 } /* Name.Builtin */
-.highlight .nc { color: #445588; font-weight: bold } /* Name.Class */
+.highlight .nb { color: #445588} /* Name.Builtin #0086B3 MEDIUMSPRINGGREEN*/
+.highlight .nc { color: #00FA9A; font-weight: bold } /* Name.Class #445588 	MEDIUMSPRINGGREEN*/
 .highlight .no { color: #008080 } /* Name.Constant */
 .highlight .ni { color: #800080 } /* Name.Entity */
-.highlight .ne { color: #990000; font-weight: bold } /* Name.Exception */
-.highlight .nf { color: #990000; font-weight: bold } /* Name.Function */
+.highlight .ne { color: #FFFFE0; font-weight: bold } /* Name.Exception #990000 LIGHTYELLOW*/
+.highlight .nf { color: #FFFFE0; font-weight: bold } /* Name.Function #990000 LIGHTYELLOW*/
 .highlight .nn { color: $oc-white } /* Name.Namespace */
 .highlight .nt { color: #000080 } /* Name.Tag */
 .highlight .nv { color: #008080 } /* Name.Variable */
@@ -70,17 +70,17 @@
 .highlight .p { color: $oc-white; } 
 
 /* S */
-.highlight .s { color: #d14 } /* Literal.String */
-.highlight .sb { color: #d14 } /* Literal.String.Backtick */
-.highlight .sc { color: #d14 } /* Literal.String.Char */
-.highlight .sd { color: #d14 } /* Literal.String.Doc */
-.highlight .s2 { color: #d14 } /* Literal.String.Double */
-.highlight .se { color: #d14 } /* Literal.String.Escape */
-.highlight .sh { color: #d14 } /* Literal.String.Heredoc */
-.highlight .si { color: #d14 } /* Literal.String.Interpol */
-.highlight .sx { color: #d14 } /* Literal.String.Other */
+.highlight .s { color: #FFA07A} /* Literal.String #d14 */
+.highlight .sb { color: #FFA07A} /* Literal.String.Backtick #d14 */
+.highlight .sc { color: #FFA07A} /* Literal.String.Char #d14 */
+.highlight .sd { color: #FFA07A} /* Literal.String.Doc #d14 */
+.highlight .s2 { color: #FFA07A} /* Literal.String.Double #d14 */
+.highlight .se { color: #FFA07A} /* Literal.String.Escape #d14 */
+.highlight .sh { color: #FFA07A} /* Literal.String.Heredoc #d14 */
+.highlight .si { color: #FFA07A} /* Literal.String.Interpol #d14 */
+.highlight .sx { color: #FFA07A} /* Literal.String.Other #d14 */
 .highlight .sr { color: #009926 } /* Literal.String.Regex */
-.highlight .s1 { color: #d14 } /* Literal.String.Single */
+.highlight .s1 { color: #FFA07A} /* Literal.String.Single #d14 LIGHTSALMON*/
 .highlight .ss { color: #990073 } /* Literal.String.Symbol */
 
 /* V */
