--- a/_sass/_highlighter.scss
+++ b/_sass/_highlighter.scss
@@ -70,15 +70,15 @@
 .highlight .p { color: $oc-white; } 
 
 /* S */
-.highlight .s { color: #FFA07A} /* Literal.String #d14 */
-.highlight .sb { color: #FFA07A} /* Literal.String.Backtick #d14 */
-.highlight .sc { color: #FFA07A} /* Literal.String.Char #d14 */
-.highlight .sd { color: #FFA07A} /* Literal.String.Doc #d14 */
-.highlight .s2 { color: #FFA07A} /* Literal.String.Double #d14 */
-.highlight .se { color: #FFA07A} /* Literal.String.Escape #d14 */
-.highlight .sh { color: #FFA07A} /* Literal.String.Heredoc #d14 */
-.highlight .si { color: #FFA07A} /* Literal.String.Interpol #d14 */
-.highlight .sx { color: #FFA07A} /* Literal.String.Other #d14 */
+.highlight .s { color: #FFA07A} /* Literal.String #d14 LIGHTSALMON */
+.highlight .sb { color: #FFA07A} /* Literal.String.Backtick #d14 LIGHTSALMON */
+.highlight .sc { color: #FFA07A} /* Literal.String.Char #d14 LIGHTSALMON */
+.highlight .sd { color: #FFA07A} /* Literal.String.Doc #d14 LIGHTSALMON */
+.highlight .s2 { color: #FFA07A} /* Literal.String.Double #d14 LIGHTSALMON */
+.highlight .se { color: #FFA07A} /* Literal.String.Escape #d14 LIGHTSALMON */
+.highlight .sh { color: #FFA07A} /* Literal.String.Heredoc #d14 LIGHTSALMON */
+.highlight .si { color: #FFA07A} /* Literal.String.Interpol #d14 LIGHTSALMON */
+.highlight .sx { color: #FFA07A} /* Literal.String.Other #d14 LIGHTSALMON */
 .highlight .sr { color: #009926 } /* Literal.String.Regex */
 .highlight .s1 { color: #FFA07A} /* Literal.String.Single #d14 LIGHTSALMON*/
 .highlight .ss { color: #990073 } /* Literal.String.Symbol */
