--- a/_sass/_highlighter.scss
+++ b/_sass/_highlighter.scss
@@ -53,11 +53,11 @@
 .highlight .n { color: $oc-white }
 .highlight .na { color: #008080 } /* Name.Attribute */
 .highlight .nb { color: #445588} /* Name.Builtin #0086B3 MEDIUMSPRINGGREEN*/
-.highlight .nc { color: #00FA9A; font-weight: bold } /* Name.Class #445588 	MEDIUMSPRINGGREEN*/
+.highlight .nc { color: #00FA9A } /* Name.Class #445588; font-weight: bold 	MEDIUMSPRINGGREEN*/
 .highlight .no { color: #008080 } /* Name.Constant */
 .highlight .ni { color: #800080 } /* Name.Entity */
-.highlight .ne { color: #FFFFE0; font-weight: bold } /* Name.Exception #990000 LIGHTYELLOW*/
-.highlight .nf { color: #FFFFE0; font-weight: bold } /* Name.Function #990000 LIGHTYELLOW*/
+.highlight .ne { color: #FFFFE0 } /* Name.Exception #990000; font-weight: bold LIGHTYELLOW*/
+.highlight .nf { color: #FFFFE0 } /* Name.Function #990000; font-weight: bold LIGHTYELLOW*/
 .highlight .nn { color: $oc-white } /* Name.Namespace */
 .highlight .nt { color: #000080 } /* Name.Tag */
 .highlight .nv { color: #008080 } /* Name.Variable */
