--- a/_sass/_highlighter.scss
+++ b/_sass/_highlighter.scss
@@ -4,14 +4,14 @@
 .highlight  { background: #232323; } /* $oc-black */ 
 
 /* B */
-.highlight .bp { color: #87CEFA } /* Name.Builtin.Pseudo #32cd32 LIGHTSKYBLUE*/
+.highlight .bp { color: #FD971F } /* Name.Builtin.Pseudo #32cd32 */
 
 /* C */
-.highlight .c { color: #32CD32; font-style: italic } /* Comment #bdc3c7 LIMEGREEN*/
-.highlight .cm { color: #FFA07A; font-style: italic } /* Comment.Multiline #999988 LIGHTSALMON*/
+.highlight .c { color: #797979; font-style: italic } /* Comment #bdc3c7*/
+.highlight .cm { color: #797979; font-style: italic } /* Comment.Multiline #999988*/
 .highlight .cp { color: #32CD32; font-weight: bold } /* Comment.Preproc #999999*/
 .highlight .cs { color: #32CD32; font-weight: bold; font-style: italic } /* Comment.Special #999999*/
-.highlight .c1 { color: #32CD32; font-style: italic } /* Comment.Single #999988*/
+.highlight .c1 { color: #797979; font-style: italic } /* Comment.Single #999988*/
 
 /* E */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
@@ -34,7 +34,7 @@
 .highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
 
 /* K */
-.highlight .k { color: #6495ED} /* Keyword #fd9800 ; font-weight: bold CORNFLOWERBLUE*/
+.highlight .k { color: #66D9EF} /* Keyword #fd9800 ; font-weight: bold*/
 .highlight .kc { font-weight: bold } /* Keyword.Constant */
 .highlight .kd { font-weight: bold } /* Keyword.Declaration */
 .highlight .kp { font-weight: bold } /* Keyword.Pseudo */
@@ -43,44 +43,44 @@
 .highlight .kn { color: #fd9800; font-wiehgt: bold } /* Keyword.Name */ 
 
 /* M */
-.highlight .m { color: #baffba } /* Literal.Number #1e90ff*/
-.highlight .mf { color: #baffba } /* Literal.Number.Float #1e90ff*/
-.highlight .mh { color: #baffba } /* Literal.Number.Hex #1e90ff*/
-.highlight .mi { color: #baffba } /* Literal.Number.Integer #1e90ff*/
-.highlight .mo { color: #baffba } /* Literal.Number.Oct #1e90ff*/
+.highlight .m { color: #AE81FF } /* Literal.Number #1e90ff*/
+.highlight .mf { color: #AE81FF } /* Literal.Number.Float #1e90ff*/
+.highlight .mh { color: #AE81FF } /* Literal.Number.Hex #1e90ff*/
+.highlight .mi { color: #AE81FF } /* Literal.Number.Integer #1e90ff*/
+.highlight .mo { color: #AE81FF } /* Literal.Number.Oct #1e90ff*/
 
 /* N */
 .highlight .n { color: $oc-white }
 .highlight .na { color: #008080 } /* Name.Attribute */
-.highlight .nb { color: #445588} /* Name.Builtin #0086B3 MEDIUMSPRINGGREEN*/
-.highlight .nc { color: #00FA9A } /* Name.Class #445588; font-weight: bold 	MEDIUMSPRINGGREEN*/
+.highlight .nb { color: #66D9EF} /* Name.Builtin #0086B3*/
+.highlight .nc { color: #A6E22E } /* Name.Class #445588; font-weight: bold */
 .highlight .no { color: #008080 } /* Name.Constant */
 .highlight .ni { color: #800080 } /* Name.Entity */
-.highlight .ne { color: #FFFACD } /* Name.Exception #990000; font-weight: bold LEMONCHIFFON*/
-.highlight .nf { color: #FFFACD } /* Name.Function #990000; font-weight: bold LEMONCHIFFON*/
+.highlight .ne { color: #A6E22E } /* Name.Exception #990000; font-weight: bold*/
+.highlight .nf { color: #A6E22E } /* Name.Function #990000; font-weight: bold*/
 .highlight .nn { color: $oc-white } /* Name.Namespace */
 .highlight .nt { color: #000080 } /* Name.Tag */
 .highlight .nv { color: #008080 } /* Name.Variable */
 
 /* O */
-.highlight .o {color: $oc-white } /* Operator  font-weight: bold; #adff2f*/
-.highlight .ow {color: $oc-white } /* Operator.Word font-weight: bold; #adff2f*/
+.highlight .o {color: #F92672 } /* Operator  font-weight: bold; #adff2f*/
+.highlight .ow {color: #F92672 } /* Operator.Word font-weight: bold; #adff2f*/
 
 /* P */
 .highlight .p { color: $oc-white; } 
 
 /* S */
-.highlight .s { color: #FFA07A} /* Literal.String #d14 LIGHTSALMON */
-.highlight .sb { color: #FFA07A} /* Literal.String.Backtick #d14 LIGHTSALMON */
-.highlight .sc { color: #FFA07A} /* Literal.String.Char #d14 LIGHTSALMON */
-.highlight .sd { color: #FFA07A} /* Literal.String.Doc #d14 LIGHTSALMON */
-.highlight .s2 { color: #FFA07A} /* Literal.String.Double #d14 LIGHTSALMON */
-.highlight .se { color: #FFA07A} /* Literal.String.Escape #d14 LIGHTSALMON */
-.highlight .sh { color: #FFA07A} /* Literal.String.Heredoc #d14 LIGHTSALMON */
-.highlight .si { color: #FFA07A} /* Literal.String.Interpol #d14 LIGHTSALMON */
-.highlight .sx { color: #FFA07A} /* Literal.String.Other #d14 LIGHTSALMON */
+.highlight .s { color: #E6DB74} /* Literal.String #d14 */
+.highlight .sb { color: #E6DB74} /* Literal.String.Backtick #d14 */
+.highlight .sc { color: #E6DB74} /* Literal.String.Char #d14 */
+.highlight .sd { color: #E6DB74} /* Literal.String.Doc #d14 */
+.highlight .s2 { color: #E6DB74} /* Literal.String.Double #d14 */
+.highlight .se { color: #E6DB74} /* Literal.String.Escape #d14 */
+.highlight .sh { color: #E6DB74} /* Literal.String.Heredoc #d14 */
+.highlight .si { color: #E6DB74} /* Literal.String.Interpol #d14 */
+.highlight .sx { color: #E6DB74} /* Literal.String.Other #d14 */
 .highlight .sr { color: #009926 } /* Literal.String.Regex */
-.highlight .s1 { color: #FFA07A} /* Literal.String.Single #d14 LIGHTSALMON*/
+.highlight .s1 { color: #E6DB74} /* Literal.String.Single #d14 */
 .highlight .ss { color: #990073 } /* Literal.String.Symbol */
 
 /* V */
