--- a/_sass/_highlighter.scss
+++ b/_sass/_highlighter.scss
@@ -51,7 +51,7 @@
 
 /* N */
 .highlight .n { color: $oc-white }
-.highlight .na { color: #008080 } /* Name.Attribute */
+.highlight .na { color: #A6E22E } /* Name.Attribute #008080*/
 .highlight .nb { color: #66D9EF} /* Name.Builtin #0086B3*/
 .highlight .nc { color: #A6E22E } /* Name.Class #445588; font-weight: bold */
 .highlight .no { color: #008080 } /* Name.Constant */
@@ -59,7 +59,7 @@
 .highlight .ne { color: #A6E22E } /* Name.Exception #990000; font-weight: bold*/
 .highlight .nf { color: #A6E22E } /* Name.Function #990000; font-weight: bold*/
 .highlight .nn { color: $oc-white } /* Name.Namespace */
-.highlight .nt { color: #000080 } /* Name.Tag */
+.highlight .nt { color: #F92672 } /* Name.Tag #000080*/
 .highlight .nv { color: #008080 } /* Name.Variable */
 
 /* O */
