--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -286,7 +286,7 @@ pre {
 pre code {
   padding: 0;
   font-size: 100%;
-  color: #f7f9f9;
+  /*color: #f7f9f9;*/
   background-color: transparent;
 }
 
